# strawberry

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  Readme.md  makefile
.zed/: debug.json  settings.json  tasks.json
archive/: strawberry.p64
archive/draft_1/: categories.md  control_flow.md
backend/ca65/: backend.str
backend/llvm/: backend.str
bootstrap/: Cargo.toml  coding.hpp  lsp.hpp  main.cpp  primitive.hpp  strc.hpp
core/: allocation.str  async.str  categories.str  collections.str  comparison.str  primitive.str  traits.str
core/draw/: plane.str
core/math/: matrix.str
demo/: hello.str
demo/simple/: hello.str
design/: LICENSE_DRAFT  categories.md  ideas.md  reflection.md  specification.md
doc/: specification.md
docs/: concurrency.md  scratch.md  specification.md
editor/: cloc_strawberry.txt
editor/tree-sitter-strawberry/: grammar.js
editor/zed-strawberry/: .gitignore  Cargo.toml
modules/core/: annotation.str  annotations.str  collection.str  collections.str  comparison.str  container.str  exception.str  exceptions.str  existential.str  logic.str  primitive.str  properties.str  range.str  string.str  traits.str
modules/draw/: plane.str  text.str
modules/math/: matrix.str
modules/posix/: io.str
modules/random/: random.str
modules/sound/: sound.str
modules/strawberry/: backend.str  parser.str  token.str  tokenizer.str
specification/: categories.md  grammar.md  ownership.md  reflection.md
src/: main.c  main.str
src/builtin/: number.h
src/eval/: eval.h
src/lsp/: lsp.c  (+1 more)
zed/: README.md  extension.toml
(+43 files in other folders)
